# llamarec-rag-knowledge-based-recommendation

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  populate_milvus.py  query_milvus.py
app/dataset/: create_movie_information.py  prune_reduced_dataset.py
dataset/: download.sh
dataset/ml-25m-reduced/: genome-scores.csv  links.csv  movies.csv  movies_enrich.csv  ratings.csv  tags_movies_rated.csv  tags_users_rating.csv
