[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["adrixo <avalera@hpe.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
pymilvus = "^2.4.0"
sentence-transformers = "^2.7.0"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'app.main:main'